--- a/Niños/niños.html
+++ b/Niños/niños.html
@@ -21,6 +21,10 @@
                     <li><a href="../Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
                 </ul>
             </nav>
+            <div class="search-container">
+                <input type="text" name="q" placeholder="Buscar...">
+                <button type="submit">Buscar</button>
+            </div>
         </div>
     </header>
     <div class="titulo1">
@@ -29,7 +33,7 @@
     <div class="titulo-container">
         <div class="fotos">
             <figure>
-                <img src="../Niños/Imagenes/ima1.jpg" alt="imagen1">
+                <img src="Imagenes/ima1.jpg" alt="imagen1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
@@ -37,21 +41,21 @@
             </div>
         </div>
         <div class="fotos">
-            <img src="../Niños/Imagenes/ima2.jpg" alt="imagen1">
+            <img src="Imagenes/ima2.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
                 <p class="a">Prendas para el invierno</p>
             </div>
         </div>
         <div class="fotos">
-            <img src="../Niños/Imagenes/ima3.jpg" alt="imagen1">
+            <img src="Imagenes/ima3.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
                 <p class="a">Look para Jugar</p>
             </div>
         </div>
         <div class="fotos">
-            <img src="../Niños/Imagenes/ima4.jpg" alt="imagen1">
+            <img src="Imagenes/ima4.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
                 <p class="a">Look para Dormir</p>
@@ -64,7 +68,7 @@
     <div class="ventas-container">
         <div class="ventas1">
             <figure>
-                <img src="../Niños/Imagenes/i1.jpg" alt="i1">
+                <img src="Imagenes/i1.jpg" alt="i1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
@@ -74,7 +78,7 @@
         </div>
         <div class="ventas1">
             <figure>
-                <img src="../Niños/Imagenes/i2.jpg" alt="i1">
+                <img src="Imagenes/i2.jpg" alt="i1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
@@ -84,20 +88,34 @@
         </div>
         <div class="ventas1">
             <figure>
-                <img src="../Niños/Imagenes/i3.jpg" alt="i1">
+                <img src="Imagenes/i3.jpg" alt="i1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-ventas">
-                <h2>Nike Dunk LOB SB</h2>
+                <h2>Nike Air 5</h2>
                 <p>Zapato urbano para niños</p>
                 <button>$99.99</button>
             </div>
         </div>
+    </div>
+    <div class="n">
+        <h1>tendencia</h1>
+    </div>
+    <div class="Contenedor">
+        <div class="atras botones">
+            &#60
+        </div>
+        <div class="adelante botones">
+            &#62
+        </div>
+
+        <img src="tenis1.jpg" alt="" id="imagen" >
     </div>
     <div>
         <footer>
             <p class="fin">&copy; 2024 Nike, Inc. Todos los derechos reservados </p>
         </footer>
     </div>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
