--- a/Niños/niños.html
+++ b/Niños/niños.html
@@ -115,7 +115,6 @@
             <p class="fin">&copy; 2024 Nike, Inc. Todos los derechos reservados </p>
         </footer>
     </div>
-    <script src="js/main.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
