--- a/Niños/niños.html
+++ b/Niños/niños.html
@@ -36,28 +36,36 @@
                 <img src="Imagenes/ima1.jpg" alt="imagen1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-fotos">
-                <button class="b">Comprar</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button class="b">Comprar</button>
+                </a>
                 <p class="a">Los Clásicos de siempre</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima2.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <button class="b">Comprar</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button class="b">Comprar</button>
+                </a>
                 <p class="a">Prendas para el invierno</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima3.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <button class="b">Comprar</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button class="b">Comprar</button>
+                </a>
                 <p class="a">Look para Jugar</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima4.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <button class="b">Comprar</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button class="b">Comprar</button>
+                </a>
                 <p class="a">Look para Dormir</p>
             </div>
         </div>
@@ -73,7 +81,9 @@
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
                 <p>Zapato urbano para niños</p>
-                <button>$545</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button>$545</button>
+                </a>
             </div>
         </div>
         <div class="ventas1">
@@ -83,7 +93,9 @@
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
                 <p>Zapato urbano para niños</p>
-                <button>$545</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button>$545</button>
+                </a>
             </div>
         </div>
         <div class="ventas1">
@@ -93,7 +105,10 @@
             <div class="informacion-ventas">
                 <h2>Nike Air 5</h2>
                 <p>Zapato urbano para niños</p>
-                <button>$99.99</button>
+                <a href="/Compra/compra.html" class="boton-compra">
+                    <button>$99.99</button>
+                </a>
+                
             </div>
         </div>
     </div>
