--- a/Niños/niños.html
+++ b/Niños/niños.html
@@ -36,37 +36,29 @@
                 <img src="Imagenes/ima1.jpg" alt="imagen1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="boton-compra">
-                    <button class="b">Comprar</button>
-                </a>
+                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Los Clásicos de siempre</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima2.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="boton-compra">
-                    <button class="b">Comprar</button>
-                </a>
+                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Prendas para el invierno</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima3.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="boton-compra">
-                    <button class="b">Comprar</button>
-                </a>
+                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Look para Jugar</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima4.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="boton-compra">
-                    <button class="b">Comprar</button>
-                </a>
-                <p class="a">Look para Dormir</p>
+                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
+                <p class="a">Look para Jugar</p>
             </div>
         </div>
     </div>
@@ -108,28 +100,28 @@
                 <a href="/Compra/compra.html" class="boton-compra">
                     <button>$99.99</button>
                 </a>
-                
             </div>
         </div>
     </div>
     <div class="n">
         <h1>tendencia</h1>
     </div>
-    <div class="Contenedor">
-        <div class="atras botones">
-            &#60
-        </div>
-        <div class="adelante botones">
-            &#62
-        </div>
-
-        <img src="tenis1.jpg" alt="" id="imagen" >
-    </div>
+    <section class="gallery">
+        <img src="tenis1.jpg" alt="Tenis 1">
+        <img src="tenis2.jpg" alt="Tenis 2">
+        <img src="tenis3.jpg" alt="Tenis 3">
+        <img src="tenis4.jpg" alt="Tenis 4">
+    </section>
+    
     <div>
         <footer>
             <p class="fin">&copy; 2024 Nike, Inc. Todos los derechos reservados </p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="js/main.js"></script>
+
 </body>
 </html>
+
+
+
