--- a/Niños/niños.html
+++ b/Niños/niños.html
@@ -36,28 +36,28 @@
                 <img src="Imagenes/ima1.jpg" alt="imagen1" class="imagen-con-trasicion">
             </figure>
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
+                <a href="../Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Los Clásicos de siempre</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima2.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
+                <a href="../Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Prendas para el invierno</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima3.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
+                <a href="../Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Look para Jugar</p>
             </div>
         </div>
         <div class="fotos">
             <img src="Imagenes/ima4.jpg" alt="imagen1" class="imagen-con-trasicion">
             <div class="informacion-fotos">
-                <a href="/Compra/compra.html" class="comprar-link">Comprar</a>
+                <a href="../Compra/compra.html" class="comprar-link">Comprar</a>
                 <p class="a">Look para Jugar</p>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
                 <p>Zapato urbano para niños</p>
-                <a href="/Compra/compra.html" class="boton-compra">
+                <a href="../Compra/compra.html" class="boton-compra">
                     <button>$545</button>
                 </a>
             </div>
@@ -85,7 +85,7 @@
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
                 <p>Zapato urbano para niños</p>
-                <a href="/Compra/compra.html" class="boton-compra">
+                <a href="../Compra/compra.html" class="boton-compra">
                     <button>$545</button>
                 </a>
             </div>
@@ -97,7 +97,7 @@
             <div class="informacion-ventas">
                 <h2>Nike Air 5</h2>
                 <p>Zapato urbano para niños</p>
-                <a href="/Compra/compra.html" class="boton-compra">
+                <a href="../Compra/compra.html" class="boton-compra">
                     <button>$99.99</button>
                 </a>
             </div>
