--- a/Calzado/Calzados.html
+++ b/Calzado/Calzados.html
@@ -37,7 +37,7 @@
                 <tbody id="carrito-body">
                 </tbody>
             </table>
-            <p id="total">Total: S/0.00</p><a href="/Compra/compra.html" class="boton-compra">
+            <p id="total">Total: S/0.00</p><a href="../Compra/compra.html" class="boton-compra">
                 <div class="recuadro-comprar">Comprar</div>
             </a>
             
